# AI-Based-Job-Profile-Matching-and-Notification-System

./: README.md
backend/: .env  .env.example  pyproject.toml  streamlit_app.py
backend/app/: main.py
backend/app/api/routers/: health.py  jobs.py  matches.py  notifications.py  resumes.py
backend/app/core/: config.py  security.py
backend/app/models/: schemas.py
backend/app/services/: match_score.py  preprocess.py  vectorize.py
backend/app/workers/: scheduler.py
backend/tests/: test_api.py
